@@ -18,12 +18,12 @@
                 },
                 "trace_id": {
                     "description": "Hex encoded 128 random bits ID of the correlated trace.", 
-                    "type": ["string", "null"],
+                    "type": "string",
                     "maxLength": 1024
                 },
                 "parent_id": {
                     "description": "Hex encoded 64 random bits ID of the parent transaction or span.", 
-                    "type": ["string", "null"],
+                    "type": "string",
                     "maxLength": 1024
                 },
                 "timestamp": {
@@ -33,7 +33,7 @@
                     "format": "date-time"
                 }
             },
-            "required": ["id", "transaction_id", "trace_id"]
+            "required": ["id", "transaction_id", "trace_id", "parent_id"]
         }
     ]
 }
