@@ -13,11 +13,11 @@
                 },
                 "trace_id": {
                     "description": "Hex encoded 128 random bits ID of the correlated trace.", 
-                    "type": ["string", "null"],
+                    "type": "string",
                     "maxLength": 1024
                 },
                 "parent_id": {
-                    "description": "Hex encoded 64 random bits ID of the parent transaction or span.", 
+                    "description": "Hex encoded 64 random bits ID of the parent transaction or span. Only root transactions of a trace do not have a parent_id, otherwise it needs to be set.", 
                     "type": ["string", "null"],
                     "maxLength": 1024
                 },
@@ -38,7 +38,7 @@
                     "required": ["started"]
                 }
             },
-            "required": ["id", "trace_id","span_count"]
+            "required": ["id", "trace_id", "span_count"]
         }
     ]
 }
