@@ -86,6 +86,7 @@
                 },
                 "hex_id": "0147258369abcdef",
                 "name": "sp1",
+                "parent_id": "012345654321123",
                 "start": {
                     "us": 10000
                 },
